Removed hardcoded file path. The first command line argument is now the path to the file to execute.