@@ -4,13 +4,17 @@ import uk.co.joewillmott.exceptions.*;
 import uk.co.joewillmott.interpreter.Interpreter;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
 public class Main {
-    public static void main(String[] args) throws UnableToPeekException, InvalidSyntaxException, UndefinedVariableException, InvalidTypeException, IOException, UndefinedFunctionException, InvalidFunctionCall {
-        String content = new String(Files.readAllBytes(Paths.get("C:\\Users\\Joe\\Desktop\\Interpreter\\src\\uk\\co\\joewillmott\\prog.txt")));
-        content = content.replaceAll("[\\r\\n]", " ");
+    public static void main(String[] args) throws UnableToPeekException, InvalidSyntaxException, UndefinedVariableException, InvalidTypeException, IOException, UndefinedFunctionException, InvalidFunctionCall, NoSuchMethodException, IllegalAccessException, InvocationTargetException {
+        if (args.length == 0) {
+            throw new IllegalArgumentException("First argument should be the path to the file to execute.");
+        }
+
+        String content = Files.readString(Paths.get(args[0]));
 
         Interpreter interpreter = new Interpreter(content);
         interpreter.evaluate();
